<resources>
    <string name="app_name">No calories</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TextStart">Вас приветствует самое лучшее приложение по подсчету калорий и уходом за своим здоровьем</string>
    <string name="StartHello">Добро пожаловать</string>
    <string name="log_in_as_a_guest">войти как гость</string>
    <string name="Registration">Регистрация</string>
    <string name="Entrance">Вход</string>
    <string name="What_is_your_goal">Какая ваша цель</string>
    <string name="password">Пароль</string>
    <string name="Example_login">Пример Login@mail.ru</string>
    <string name="Email">Aдрес электронной почты</string>
    <string name="passwordRepeat">Повтори пороль</string>
    <string name="gender">Пол</string>
    <string name="man">Мужчина </string>
    <string name="Woman">Женщина </string>
    <string name="Goal">Цель</string>
    <string name="Be_in_shape">Быть в форме</string>
    <string name="Year_of_birth">Год рождения</string>
    <string name="Weight">Вес[кг]</string>
    <string name="Height">Рост[см]</string>
    <string name="user_agreement1">Я соглашаюсь с </string>
    <string name="user_agreement2">условия пользования</string>
    <string name="Login_via_email">ВОЙТИ ПО ЭЛЕКТРОННОЙ ПОЧТЕ</string>
    <string name="Login_via_google">ВОЙТИ ЧЕРЕЗ GOOGLE</string>
    <string-array name="Goal">
        <item>Быть в форме</item>
        <item>Похудеть</item>
        <item>Набрать мышечную массу</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная страница</string>
    <string name="menu_gallery">Профель</string>
    <string name="menu_slideshow">Статистика</string>
    <string name="title_activity_no_calories">NoCaloriesActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_no_calories_nav">NoCaloriesActivityNav</string>
    <string name="My_Profile">Мой профиль</string>
    <string name="statistics">Cтатистика</string>
    <string name="Recipes">Рецепты</string>
    <string name="Recommendations">Cоветы для похудения</string>
    <string name="Menu">Меню</string>
    <string name="log_out_account">Выход из аккаунта</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="review">Обзор</string>
    <string name="add_a_meal">Добавить приём пищи</string>
    <string name="breakfast">Завтрак</string>
    <string name="second_breakfast">Второй завтрак</string>
    <string name="Lunch">Обед</string>
    <string name="Afternoon_snack">Полдник</string>
    <string name="Supper">Ужин</string>
    <string name="Second_dinner">Второй ужин</string>
    <string name="Activity">Активность</string>
    <string name="main_menu">Главное меню</string>
    <string name="_0">0</string>
    <string name="calories">ккал</string>
    <string name="activity">Aктивность</string>
    <string name="_1">-</string>
    <string name="Drinking_regime">Питьевой режим</string>
    <string name="_l">л</string>
    <string name="Current_weight">Текущий вес</string>
    <string name="_L2">из</string>
    <string name="kg">кг</string>
    <string name="calorie_limit">Лимит калорий в сутки</string>
    <string name="calories_2">калл из</string>
    <string name="g">г из</string>
    <string name="Squirrels">Белки</string>
    <string name="Ullevody">Уллеводы</string>
    <string name="Carbohydrates">Углеводы</string>
    <string name="Fats">Жиры</string>
    <string name="Fiber">Клетчатка</string>
    <string name="User">Пользователь</string>
    <string name="nocalories_mail_ru">Nocalories@mail.ru</string>
    <string name="water">Вода – это важнейшая составная часть всего живого по этому не забывайте пить воду чаще</string>
    <string name="_250">довавить 250 мл</string>
    <string name="_500">довавить 500 мл</string>
    <string name="_1000">довавить 1 л</string>
    <string name="water_end">Если не одно не подходит добавьте свое значение</string>
    <string name="water_advice">нажмите сюда если хотите больше узнать о приёме воды</string>
    <string name="addwater4">Довавить</string>

    <string name="link_to_recipes">https://www.russianfood.com/recipes/bytype/?fid=99</string>
    <string name="link_loss_link">https://medartby.ru/blog/stati-o-zdorovom-obraze-zhizni/26-sovetov-dlya-pokhudeniya-kotorye-realno-rabotayut/</string>
    <string name="link_water">"https://profilaktica.ru/for-population/profilaktika-zabolevaniy/vse-o-pravilnom-pitanii/skolko-vody-nuzhno-pit-v-den/</string>
    <string name="Are_you_sure_you_want_to_get_out">Вы уверены что хотите выйти</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="activity_name">Название активности</string>
    <string name="eating">Приём</string>
    <string name="min">Введите количество минут</string>


    <string name="activity_user_1">Бег</string>
    <string name="activity_user_2">Плавание</string>
    <string name="activity_user_3">Размеренная езда на велосипеде по ровной местности</string>
    <string name="activity_user_4">Теннис</string>
    <string name="activity_user_5">Активные формы йоги</string>
    <string name="activity_user_6">Легкие работы в саду, ремонтные работы в доме</string>
    <string name="activity_user_7">Занятия физкультурой</string>
    <string name="activity_user_8">Плавательние брасом</string>
    <string name="activity_user_9">Энергичные танцы</string>
    <string name="activity_user_10">Прыжки со скакалкой</string>
    <string name="activity_user_11">Тяжелые работы в саду (копание, перенос тяжестей с учащением сердцебиения)</string>
    <string name="activity_user_12">Ходьба в гору или с тяжелым рюкзаком</string>
    <string name="activity_user_13">Интенсивные интервальные тренировки</string>
    <string name="activity_user_14">Ходьба</string>
    <string name="activity_user_15">Скандинавская ходьба</string>
    <string name="Change_the_weight">Изменить вес</string>
    <string name="weight">Вес</string>
    <string name="save">Cохранить</string>
    <string name="_0Water">0</string>
    <string name="Change_gender">Изменить пол</string>
    <string name="Change_goal">Изменить цель</string>
    <string name="ChangeYear">Изменить год рождения</string>
    <string name="year">Год</string>
    <string name="sm">см</string>
    <string name="ChangGrowth">Изменить рост</string>
    <string name="_100">На 100 г</string>
    <string name="_g">г</string>
    <string name="_g2">Введите количество грамм</string>

</resources>