<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/My_Profile" />
        <item
            android:id="@+id/statistics"
            android:icon="@drawable/free_icon_font_chat_arrow_grow"
            android:title="@string/statistics" />
        <item
            android:id="@+id/recipes"
            android:icon="@drawable/free_icon_font_restaurant_6349916_24"
            android:title="@string/Recipes" />
        <item
            android:id="@+id/recommendations"
            android:icon="@drawable/free_icon_font_comment_alt_3916599_24"
            android:title="@string/Recommendations"
            />
        <item
            android:id="@+id/log_out_account"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/log_out_account" />
    </group>
</menu>