<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/test"
    android:layout_margin="10dp"
    android:paddingBottom="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="0dp"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:shadowColor="@color/black"
        android:shadowDx="-1"
        android:shadowDy="-1"
        android:shadowRadius="1"
        android:layout_height="wrap_content"
        android:textColor="@color/pale_green"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_100"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/_0"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/calories"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/calories"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Squirrels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/_0"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/Squirrels"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/Squirrels"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Fats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fats"
        android:textColor="@color/pale_green"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/Fats"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/Carbohydrates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginTop="10dp"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Carbohydrates"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/Carbohydrates"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/Fiber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fiber"
        android:textColor="@color/pale_green"
        android:textSize="14sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/Fiber"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />


</androidx.constraintlayout.widget.ConstraintLayout>