<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".ui.activity.Registration_or_Login">
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="246dp"
        android:layout_height="234dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/bez_fona_3"
        tools:layout_editor_absoluteY="30dp"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="80dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/russo_one_regular"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowRadius="1"
        android:text="@string/StartHello"
        android:textColor="@color/pale_green"
        android:textSize="25sp" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/textView2"
        android:layout_width="290dp"
        android:layout_height="145dp"
        android:elevation="80dp"
        android:fontFamily="@font/alegreya_semi_bold"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="-1"
        android:shadowRadius="1"
        android:text="@string/TextStart"
        android:textColor="@color/pale_green"
        android:textSize="23sp"
         />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/batton_b"
        android:paddingHorizontal="97dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alegreya_semi_bold"
        android:paddingVertical="15dp"
        android:text="@string/Registration"
        android:textColor="@color/pale_green"
        android:textSize="16sp"
        android:layout_gravity="center" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEntrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Entrance"
        android:background="@drawable/batton_b"
        android:textColor="@color/pale_green"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alegreya_semi_bold"
        android:paddingHorizontal="80dp"
        android:layout_gravity="center" />



</LinearLayout>