<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.mainBlock.diplink.LogOutAccount">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/bez_fona_3"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Are_you_sure_you_want_to_get_out"
        android:background="@drawable/batton_b"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/russo_one_regular"
        android:textColor="@color/pale_green"
        android:padding="10dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:background="@drawable/batton_b"
            android:textColor="@color/pale_green"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:fontFamily="@font/alegreya_semi_bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:background="@drawable/batton_b"
            android:textColor="@color/pale_green"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:fontFamily="@font/alegreya_semi_bold" />

    </LinearLayout>


</LinearLayout>