<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.registrationBlock.EntryStage2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="246dp"
        android:layout_height="234dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/bez_fona_3"
        tools:layout_editor_absoluteY="30dp"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="80dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/russo_one_regular"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowRadius="1"
        android:text="@string/Entrance"
        android:textColor="@color/pale_green"
        android:textSize="25sp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin_via_google"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/Login_via_google"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alegreya_semi_bold"
        android:layout_gravity="center" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin_via_email"
        android:paddingStart="10dp"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/baseline_local_post_office_24"
        android:text="@string/Login_via_email"
        android:background="@color/pale_green"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alegreya_semi_bold"
        android:layout_gravity="center" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle"
        android:drawableStart="@drawable/_back_24"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:paddingStart="5dp"
        android:fontFamily="@font/alegreya_semi_bold"
        android:layout_gravity="center" />

</LinearLayout>